[package]
name = "auth_mgmt"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
base64 = "=0.6.0"
bidir-map = "=0.3.2"
derive-new = "=0.4.0"
error-chain = "=0.10.0"
file = "=1.1.1"
filebuffer = "=0.2.0"
log = "=0.3.8"
log4rs = "=0.7.0"
openssl = "=0.9.14"
ring = "=0.11.0"
rmp = { git = "https://github.com/3Hren/msgpack-rust.git", rev = "f4184f2" }
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust.git", rev = "f4184f2" }
rocket = { version = "=0.3.0", features = ["tls"] }
rocket_codegen = "=0.3.0"
rocket_contrib = { version = "=0.3.0", features = ["handlebars_templates", "json"] }
serde = "=1.0.9"
serde_derive = "=1.0.9"
serde_json = "=1.0.2"
simple_logger = "=0.4.0"
structopt = "=0.0.5"
structopt-derive = "=0.0.5"

[lib]
name = "auth_mgmt"
path = "src/auth_mgmt/lib.rs"

[features]
default = []
o = []